--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <title>FavMyInstant</title>
 <head>
   <h2>FMI Sound panel</h2>
-  <h4>*TO STOP CLICK RELOAD PAGE</h4>
+  <h4>*TO STOP , CLICK RELOAD PAGE</h4>
   <hr>
   <style>
     h4{color : red ;}
