--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <title>FavMyInstant</title>
 <head>
   <h2>FMI Sound panel</h2>
-  <h4>*TO STOP , CLICK RELOAD PAGE</h4>
+  <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
     h4{color : red ;}
