--- a/main.html
+++ b/main.html
@@ -2,12 +2,11 @@
 <html>
 <title>FavMyInstant</title>
 <head>
-  <h1>FMI Sound panel</h1>
+  <h1><b style="color : red">F</b><b style="color : orange">M</b><b style="color : orange">I </b><b style="color : yellow">S</b><b>o</b><b style="color : lime">u</b><b style="color : aqua">n</b>d <b style="color : 	rgb(203, 195, 227)"></b>p<b style="color : red">p</b>a<b style="color = orange">n</b><b style="color : yellow">e</b><b style="color : lime">l</b></b></h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
     h4{color : red ;}
-    h2{color : white ;}
     html{background-color: rgb(15,15,15);}
   </style>
   <div name="myinstant-sounds"><iframe width="110" height="200" src="https://www.myinstants.com/instant/windows-xp-green-screen-error-9833/embed/" frameborder="0" scrolling="no"></iframe>
