--- a/main.html
+++ b/main.html
@@ -2,7 +2,21 @@
 <html>
 <title>FavMyInstant</title>
 <head>
-  <h1><b style="color : red">F</b><b style="color : orange">M</b><b style="color : orange">I </b><b style="color : yellow">S</b><b>o</b><b style="color : lime">u</b><b style="color : aqua">n</b>d <b style="color : 	rgb(203, 195, 227)"></b>p<b style="color : red">p</b>a<b style="color = orange">n</b><b style="color : yellow">e</b><b style="color : lime">l</b></b></h1>
+  <h1>
+    <b style="color : red">F</b>
+    <b style="color : orange">M</b>
+    <b style="color : yellow">I </b>
+    <b style="color : lime">S</b>
+    <b style="color : aqua">o</b>
+    <b style="color : rgb(203, 195, 227)">u</b>
+    <b style="color : red">n</b>
+    <b style="color : orange">d </b>
+    <b style="color : yellow">p</b>
+    <b style="color = lime">a</b>
+    <b style="color : aqua">n</b>
+    <b style="color : rgb(203, 195, 227)">e</b>
+    <b style="color : red">l</b>
+  </h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
