--- a/main.html
+++ b/main.html
@@ -2,21 +2,19 @@
 <html>
 <title>FavMyInstant</title>
 <head>
-  <h1>
-    <b style="color : red">F</b>
-    <b style="color : orange">M</b>
-    <b style="color : yellow">I  </b>
-    <b style="color : lime">S</b>
-    <b style="color : aqua">o</b>
-    <b style="color : rgb(203, 195, 227)">u</b>
-    <b style="color : red">n</b>
-    <b style="color : orange">d  </b>
-    <b style="color : yellow">p</b>
-    <b style="color = lime">a</b>
-    <b style="color : aqua">n</b>
-    <b style="color : rgb(203, 195, 227)">e</b>
-    <b style="color : red">l</b>
-  </h1>
+    <h1 style="color : red">F</b>
+    <h1 style="color : orange">M</b>
+    <h1 style="color : yellow">I </b>
+    <h1 style="color : lime">S</b>
+    <h1 style="color : aqua">o</b>
+    <h1 style="color : rgb(203, 195, 227)">u</b>
+    <h1 style="color : red">n</b>
+    <h1 style="color : orange">d </b>
+    <h1 style="color : yellow">p</b>
+    <h1 style="color : lime">a</b>
+    <h1 style="color : aqua">n</h1>
+    <h1 style="color : rgb(203, 195, 227)">e</h1>
+    <h1 style="color : red">l</h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
