--- a/main.html
+++ b/main.html
@@ -3,16 +3,16 @@
 <title>FavMyInstant</title>
 <head>
     <b>
-        <h1 style="color : red">F</b>
-        <h1 style="color : orange">M</b>
-        <h1 style="color : yellow">I </b>
-        <h1 style="color : lime">S</b>
-        <h1 style="color : aqua">o</b>
-        <h1 style="color : rgb(203, 195, 227)">u</b>
-        <h1 style="color : red">n</b>
-        <h1 style="color : orange">d </b>
-        <h1 style="color : yellow">p</b>
-        <h1 style="color : lime">a</b>
+        <h1 style="color : red">F</h1>
+        <h1 style="color : orange">M</h1>
+        <h1 style="color : yellow">I </h1>
+        <h1 style="color : lime">S</h1>
+        <h1 style="color : aqua">o</h1>
+        <h1 style="color : rgb(203, 195, 227)">u</h1>
+        <h1 style="color : red">n</h1>
+        <h1 style="color : orange">d </h1>
+        <h1 style="color : yellow">p</h1>
+        <h1 style="color : lime">a</h1>
         <h1 style="color : aqua">n</h1>
         <h1 style="color : rgb(203, 195, 227)">e</h1>
         <h1 style="color : red">l</h1>
