--- a/main.html
+++ b/main.html
@@ -2,21 +2,7 @@
 <html>
 <title>FavMyInstant</title>
 <head>
-    <b>
-        <h1 style="color : red">F</h1>
-        <h1 style="color : orange">M</h1>
-        <h1 style="color : yellow">I </h1>
-        <h1 style="color : lime">S</h1>
-        <h1 style="color : aqua">o</h1>
-        <h1 style="color : rgb(203, 195, 227)">u</h1>
-        <h1 style="color : red">n</h1>
-        <h1 style="color : orange">d </h1>
-        <h1 style="color : yellow">p</h1>
-        <h1 style="color : lime">a</h1>
-        <h1 style="color : aqua">n</h1>
-        <h1 style="color : rgb(203, 195, 227)">e</h1>
-        <h1 style="color : red">l</h1>
-    </b>
+    <h1><b>FMI Sound panel</b></h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
