--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
+    h1{color : cyan}
     h4{color : red ;}
     html{background-color: rgb(15,15,15);}
   </style>
