--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
 <title>FavMyInstant</title>
 <head>
-    <h1><b>FMI Sound panel</b></h1>
+    <h1><b>Meme sound panel</b></h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
   <hr>
   <style>
@@ -46,6 +46,8 @@
     <iframe width="110" height="200" src="https://www.myinstants.com/instant/ack-87763/embed/" frameborder="0" scrolling="no"></iframe>
     <iframe width="110" height="200" src="https://www.myinstants.com/instant/oh-my-god-bro-oh-hell-nah-man-42939/embed/" frameborder="0" scrolling="no"></iframe>
       <iframe width="110" height="200" src="https://www.myinstants.com/instant/augghh1221324234-87610/embed/" frameborder="0" scrolling="no"></iframe>
+      <iframe width="110" height="200" src="https://www.myinstants.com/instant/italian-brainrot-ringtone-99727/embed/" frameborder="0" scrolling="no"></iframe>
+      <iframe width="110" height="200" src="https://www.myinstants.com/instant/eww-brother-eww-60822/embed/" frameborder="0" scrolling="no"></iframe>
   </div>
   
 </head>
