--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>FavMyInstant</title>
+<title>⁞ MemePanel ⁞</title>
 <head>
     <h1><b>Meme sound panel</b></h1>
   <button onclick="location.reload()"><h4>STOP MUSIC</h4></button>
